force-app/main/default/objects/Forecast_Config__mdt/Forecast_Config__mdt.object-meta.xml
<CustomObject>
    <label>Forecast Config</label>
    <pluralLabel>Forecast Configs</pluralLabel>
</CustomObject>