force-app/main/default/objects/Forecast_Config__mdt/fields/Config_Key__c.field-meta.xml
<CustomField>
    <fullName>Config_Key__c</fullName>
    <externalId>true</externalId>
    <label>Config Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>