force-app/main/default/objects/Forecast_Config__mdt/fields/Default_Forecast_Months__c.field-meta.xml
<CustomField>
    <fullName>Default_Forecast_Months__c</fullName>
    <label>Default Forecast Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>