force-app/main/default/objects/Forecast_Config__mdt/fields/Funnel_Stages_JSON__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Stages_JSON__c</fullName>
    <label>Funnel Stages JSON</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>