force-app/main/default/objects/Forecast_Config__mdt/fields/Health_Score_Weights_JSON__c.field-meta.xml
<CustomField>
    <fullName>Health_Score_Weights_JSON__c</fullName>
    <label>Health Score Weights JSON</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>