force-app/main/default/objects/Forecast_Config__mdt/fields/Moving_Average_Months__c.field-meta.xml
<CustomField>
    <fullName>Moving_Average_Months__c</fullName>
    <label>Moving Average Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>