force-app/main/default/objects/Forecast_Config__mdt/fields/Seasonality_Lookback_Months__c.field-meta.xml
<CustomField>
    <fullName>Seasonality_Lookback_Months__c</fullName>
    <label>Seasonality Lookback Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>